# XrayFilt

./: CMakeLists.txt  Specs.ods  XrayFilt.cpp  vis1.mac
Spectrum Histories/DetectedSpectra/: plot.sh
include/: ActionInit.hh  Config.hh  DetSD.hh  DetectorConstr.hh  ExG4ActionInitialization01.hh  ExG4DetectorConstruction01.hh  ExG4DetectorSD.hh  ExG4PrimaryGeneratorAction01.hh  GetConfig.hh  PrimaryGenAction.hh  SpectraManager.hh  spectraManager.hh
someResults/: MultiThreading.ods
src/: ActionInit.cpp  Config.cpp  DetSD.cpp  DetectorConstr.cpp  ExG4ActionInitialization01.cpp  ExG4DetectorConstruction01.cpp  ExG4DetectorSD.cpp  ExG4PrimaryGeneratorAction01.cpp  GetConfig.cpp  PrimaryGenAction.cpp  SpectraManager.cpp  spectraManager.cpp
